--- a/integrated_fm_exploration/m2_integration_fm_clustr_gn_explrtn.Rmd
+++ b/integrated_fm_exploration/m2_integration_fm_clustr_gn_explrtn.Rmd
@@ -100,133 +100,333 @@ source("/nfs/users/nfs_j/jr35/Mali2/mali22_code/pf_common_vars.R")
 ```
 
 
-```{r, message=F, warning=F}
-##Read BPcells matrices
-# v3_m2_asex_cr_filt_norm_harmony_jnd <- list.files("data/processed/Pf", pattern = "v3_m2_asex_cr_filt_(all|noM55)_jc._norm_harmony_jnd.RDS$", full.names = T, recursive = T, include.dirs = T) %>% 
-# v3_m2_asex_cr_filt_norm_harmony_jnd <- list.files("data/processed/Pf", pattern = "v3_m2_asex_cr_filt_noM55_jc._norm_harmony_jnd.RDS$", full.names = T, recursive = T, include.dirs = T) %>% 
-# v3_m2_asex_cr_filt_norm_harmony_jnd <- list.files("data/processed/Pf", pattern = "v3_m2_asex_cr_filt_noM55_jc._norm_harmony_jnd3.RDS$", full.names = T, recursive = T, include.dirs = T) %>% 
-v3_m2_asex_cr_filt_norm_harmony_jnd <- list.files("data/processed/Pf", pattern = "v3_m2_asex_cr_filt_noM55_jc._norm_harmony_jnd_slim3.RDS$", full.names = T, recursive = T, include.dirs = T) %>% 
-  set_names(nm = (str_remove_all(.,'data/processed/Pf/m2_all/v3_m2_asex_cr_filt_|_norm.*'))) %>% 
+```{r, message=F, warning=F, eval=T}
+## Get file list
+fm_leiden_w_donors_norm_harmony_jnd_list_files <- Sys.glob("data/processed/Pf/m2_all/integration/fm_leiden_w_donors_*_norm_harmony_jnd.RDS")
+
+fm_leiden_w_donors_norm_harmony_jnd_list_files
+```
+
+```{r, message=F, warning=F, eval=T}
+## read filtered barcodes
+fm_leiden_w_donors_norm_harmony_jnd <- map(fm_leiden_w_donors_norm_harmony_jnd_list_files, ~.x %>% 
+  set_names(nm = (str_remove_all(.,'data/processed/Pf/m2_all/integration/fm_leiden_w_donors_|_norm_harmony_jnd.RDS')))) %>% 
+  unlist(., recursive = F) %>% 
   # .[sample_name] %>%
   map(readRDS)
 
 ```
 
+
 ```{r, warning=FALSE, message=FALSE}
-# imap(v3_m2_asex_cr_filt_norm_harmony_jnd, ~DimPlot(.x, label = T, reduction = "umap.harmony_PC_man", group.by = "harmony_PC_man_clusters") + labs(title = .y))
+# imap(fm_leiden_w_donors_norm_harmony_jnd, ~DimPlot(.x, label = T, reduction = "umap.harmony_PC_man", group.by = "harmony_PC_man_clusters") + labs(title = .y))
 
 ```
 
 ```{r, warning=FALSE, message=FALSE}
-map(v3_m2_asex_cr_filt_norm_harmony_jnd, ~DimPlot(.x, label = F, reduction = "umap.harmony_PC_man", group.by = "stage_fld") + scale_color_manual(values = sp_fld_colors2))
-```
-
-
-```{r, warning=FALSE, message=FALSE}
-map(v3_m2_asex_cr_filt_norm_harmony_jnd, ~DimPlot(.x, label = F, reduction = "umap.harmony_PC_man", group.by = "stage_fld") + scale_color_manual(values = sp_col_new))
+map(fm_leiden_w_donors_norm_harmony_jnd, ~DimPlot(.x, label = F, reduction = "umap.harmony_PC_man", group.by = "stage_fld") + scale_color_manual(values = sp_fld_colors))
 ```
 
 ```{r, warning=FALSE, message=FALSE}
-# imap(v3_m2_asex_cr_filt_norm_harmony_jnd, ~DimPlot(.x, reduction = "umap.harmony_PC_man", cells.highlight = colnames(.x[,.x@meta.data$stage_fld == "Unassigned"])) + labs(title = .y))
+imap(fm_leiden_w_donors_norm_harmony_jnd, ~FeaturePlot(.x, reduction = "umap.harmony_PC_man", features = "nFeature_RNA", label = T) + labs(title = .y))
+```
+
+```{r, warning=FALSE, message=FALSE}
+# imap(fm_leiden_w_donors_norm_harmony_jnd, ~DimPlot(.x, reduction = "umap.harmony_PC_man", cells.highlight = colnames(.x[,.x@meta.data$stage_fld == "Unassigned"])) + labs(title = .y))
 
 ```
 
 ```{r, warning=FALSE, message=FALSE}
-# for (nm in names(v3_m2_asex_cr_filt_norm_harmony_jnd)) {
-#   v3_m2_asex_cr_filt_norm_harmony_jnd[[nm]][["RNA"]]$data <- as(v3_m2_asex_cr_filt_norm_harmony_jnd[[nm]][["RNA"]]$data, Class = "dgCMatrix")
+# for (nm in names(fm_leiden_w_donors_norm_harmony_jnd)) {
+#   fm_leiden_w_donors_norm_harmony_jnd[[nm]][["RNA"]]$data <- as(fm_leiden_w_donors_norm_harmony_jnd[[nm]][["RNA"]]$data, Class = "dgCMatrix")
 # }
 ```
 
 
 ```{r, warning=FALSE, message=FALSE}
-v3_m2_asex_cr_filt_norm_harmony_jnd <- map(v3_m2_asex_cr_filt_norm_harmony_jnd, ~SetIdent(.x, value = "harmony_PC_man_clusters"))
+fm_leiden_w_donors_norm_harmony_jnd <- map(fm_leiden_w_donors_norm_harmony_jnd, ~SetIdent(.x, value = "leiden"))
 ```
 
 ```{r, warning=FALSE, message=FALSE}
-map(v3_m2_asex_cr_filt_norm_harmony_jnd, ~DimPlot(.x))
+imap(fm_leiden_w_donors_norm_harmony_jnd, ~DimPlot(.x) + labs(title = .y))
 ```
 
 ```{r, warning=FALSE, message=FALSE}
-v3_m2_asex_cr_filt_norm_harmony_jnd[[1]]
+fm_leiden_w_donors_norm_harmony_jnd[[1]]
 ```
 
 ```{r, warning=FALSE, message=FALSE}
-v3_m2_asex_cr_filt_norm_harmony_jnd[[1]]@meta.data %>% count(orig.ident)
+fm_leiden_w_donors_norm_harmony_jnd[[1]]@meta.data %>% count(orig.ident)
 ```
 
 ```{r, warning=FALSE, message=FALSE}
-map(v3_m2_asex_cr_filt_norm_harmony_jnd, ~VlnPlot(.x, features = "pf_gn_count", group.by = "donor"))
+map(fm_leiden_w_donors_norm_harmony_jnd, ~VlnPlot(.x, features = "pf_gn_count", group.by = "donor"))
 ```
 
 ```{r, warning=FALSE, message=FALSE}
-map(v3_m2_asex_cr_filt_norm_harmony_jnd, ~VlnPlot(.x, features = "nFeature_RNA", group.by = "donor"))
+map(fm_leiden_w_donors_norm_harmony_jnd, ~VlnPlot(.x, features = "nFeature_RNA", group.by = "donor"))
 ```
 
 ```{r, warning=FALSE, message=FALSE}
-map(v3_m2_asex_cr_filt_norm_harmony_jnd, ~VlnPlot(.x, features = "nFeature_RNA", group.by = "donor"))
+map(fm_leiden_w_donors_norm_harmony_jnd, ~VlnPlot(.x, features = "nFeature_RNA", group.by = "donor"))
 ```
 
 ```{r, warning=FALSE, message=FALSE}
-cb_asex_de <- map(v3_m2_asex_cr_filt_norm_harmony_jnd, ~FindAllMarkers(.x, assay = "RNA", slot = "data"))
+imap(fm_leiden_w_donors_norm_harmony_jnd, ~DimPlot(.x, reduction = "umap.harmony_PC_man", group.by = 'leiden', label = T) + labs(title = .y))
+```
+
+```{r, warning=FALSE, message=FALSE}
+map(fm_leiden_w_donors_norm_harmony_jnd, ~DimPlot(.x, reduction = "umap.harmony_PC_man", group.by = "seurat_clusters", label = T))
+```
+
+```{r, warning=FALSE, message=FALSE}
+map(fm_leiden_w_donors_norm_harmony_jnd, ~DimPlot(.x, reduction = "umap.harmony_PC_man", group.by = "seurat_clusters", label = T, dims = c(2,3)))
+```
+######### START - Pseudobulk DE #####################
+
+```{r, warning=FALSE, message=FALSE}
+# pseudobulk the counts based on donor-condition-celltype
+pseudo_fm <- map(fm_leiden_w_donors_norm_harmony_jnd, ~AggregateExpression(.x, assays = "RNA", return.seurat = T, group.by = c("condition", "orig.ident", "seurat_clusters")))
+
+# each 'cell' is a donor-condition-celltype pseudobulk profile
+map(pseudo_fm, ~tail(Cells(.x)))
+pseudo_ifnb$celltype.stim <- paste(pseudo_ifnb$seurat_annotations, pseudo_ifnb$stim, sep = "_")
+```
+
+
+```{r, warning=FALSE, message=FALSE}
+pseudo_fm <- map(pseudo_fm, ~.x@meta.data %>%
+      mutate(cluster_condition = paste(seurat_clusters, condition)) %>%
+      select(cluster_condition) %>%
+      AddMetaData(.x, .)
+)
 
 ```
 
 
 ```{r, warning=FALSE, message=FALSE}
-cb_asex_de_anot <- map(cb_asex_de, ~.x %>% filter(p_val_adj < 0.05) %>% group_by(cluster) %>% arrange(p_val_adj, .by_group = T) %>% left_join(., Pf3D7_genes_plasmoDB[,c("gene_id", "Gene")], by = c("gene" = "gene_id")))
+map(pseudo_fm, ~.x@meta.data %>% count(condition, seurat_clusters, cluster_condition))
 
-cb_asex_de_anot
 ```
 
 
 ```{r, warning=FALSE, message=FALSE}
+pseudo_fm <- map(pseudo_fm, ~SetIdent(.x, value = "seurat_clusters"))
 
-# map2(cb_asex_de_anot, c("9", "9", "3", "8"), ~.x %>% filter(cluster == .y & avg_log2FC >0))
-map2(cb_asex_de_anot, c("3", "8"), ~.x %>% filter(cluster == .y & avg_log2FC >0))
+bulk_de <- map(pseudo_fm, ~FindAllMarkers(object = .x, test.use = "DESeq2"))
+```
+
+```{r, warning=FALSE, message=FALSE}
+bulk_de_anot <- map(bulk_de, possibly(~.x %>% filter(p_val_adj < 0.05) %>% group_by(cluster) %>% arrange(p_val_adj, .by_group = T) %>% left_join(., Pf3D7_genes_plasmoDB[,c("gene_id", "Gene")], by = c("gene" = "gene_id"))))
+
+bulk_de_anot
+```
+
+
+```{r, warning=FALSE, message=FALSE}
+map(bulk_de_anot, possibly(~.x %>% 
+      filter(p_val_adj < 0.05) %>% 
+      arrange(desc(abs(avg_log2FC))) %>% 
+      group_by(cluster) %>% 
+      slice_min(order_by = p_val_adj, n = 10) %>% 
+      slice_max(avg_log2FC, n =10)))
+
+```
+
+
+```{r, warning=FALSE, message=FALSE}
+map(bulk_de_anot, possibly(~.x %>% 
+      filter(p_val_adj < 1e-10) %>% 
+      arrange(desc(abs(avg_log2FC))) %>% 
+      group_by(cluster) %>% 
+      slice_min(order_by = p_val_adj, n = 40) %>% 
+      slice_min(p_val_adj, n =10)))
+
+```
+
+Female LE (cluster 3) activated cluster
+PF3D7-1203300 - https://journals.asm.org/doi/10.1128/mbio.03407-25
+YOP1L - tubule formation https://onlinelibrary.wiley.com/doi/10.1111/mmi.14526 , 
+ADF2 - https://pmc.ncbi.nlm.nih.gov/articles/PMC10100735/ , https://www.sciencedirect.com/science/article/pii/S0006291X10010855
+PF3D7_1210200 - https://pubmed.ncbi.nlm.nih.gov/28708996/
+FabZ, PK2
+
+Female (cluster 8) activated cluster
+PK2
+ISP3 - https://pmc.ncbi.nlm.nih.gov/articles/PMC7327484/, https://www.sciencedirect.com/science/article/pii/S1931312823003359 , https://link.springer.com/article/10.1186/1471-2164-14-256 , 
+IMC1g - https://www.sciencedirect.com/science/article/pii/S147149222400360X#ab0005 , https://pmc.ncbi.nlm.nih.gov/articles/PMC10653860/ , https://pubmed.ncbi.nlm.nih.gov/39576115/, 
+
+```{r, warning=FALSE, message=FALSE}
+imap(fm_leiden_w_donors_norm_harmony_jnd, ~DimPlot(.x, reduction = "umap.harmony_PC_man", group.by = "seurat_clusters", label = T) + labs(title = .y))
+```
+
+```{r, warning=FALSE, message=FALSE}
+map(fm_leiden_w_donors_norm_harmony_jnd, ~DimPlot(.x, reduction = "umap.harmony_PC_man", group.by = "leiden", label = T))
+```
+
+
+```{r, warning=FALSE, message=FALSE}
+map(fm_leiden_w_donors_norm_harmony_jnd, ~FeaturePlot(.x, features = "PF3D7-1460600", reduction = "umap.harmony_PC_man", order = T))
+```
+
+```{r, warning=FALSE, message=FALSE, eval=T}
+# Display the combined datasets as an interactive 3D plot
+
+plot_ly(data = data.frame(fm_leiden_w_donors_norm_harmony_jnd[["w.5.f_fLE"]]@reductions[["umap.harmony_PC_man"]]@cell.embeddings),
+        x = ~umapharmonyPCman_1, y = ~umapharmonyPCman_2, z = ~umapharmonyPCman_3,
+        color= base::as.factor(fm_leiden_w_donors_norm_harmony_jnd[["w.5.f_fLE"]]@meta.data$leiden),
+        # colors = c('blue', 'red'),
+        opacity = 0.8,
+        size = 0.1, 
+        type = 'scatter3d'
+)
 
 ```
 
 ```{r, warning=FALSE, message=FALSE}
-map(cb_asex_de_anot, ~.x %>% filter(cluster %in% c("5", "13") & avg_log2FC >0) %>% arrange(desc(avg_log2FC)))
+map(fm_leiden_w_donors_norm_harmony_jnd, ~FeaturePlot(.x, features = "nFeature_RNA", reduction = "umap.harmony_PC_man", order = T))
 ```
 
 ```{r, warning=FALSE, message=FALSE}
-# ap2-g
-map(v3_m2_asex_cr_filt_norm_harmony_jnd, ~FeaturePlot(.x, reduction = "umap.harmony_PC_man", label = T, features = "PF3D7-1222600", order = T))
+Idents(pseudo_fm) <- "cluster_condition"
+
+bulk.mono.de <- FindMarkers(object = pseudo_fm, 
+                         ident.1 = "CD14 Mono_STIM", 
+                         ident.2 = "CD14 Mono_CTRL",
+                         test.use = "DESeq2")
+head(bulk.mono.de, n = 15)
+```
+
+```{r, warning=FALSE, message=FALSE}
+# compare the DE P-values between the single-cell level and the pseudobulk level results
+names(bulk.mono.de) <- paste0(names(bulk.mono.de), ".bulk")
+bulk.mono.de$gene <- rownames(bulk.mono.de)
+
+merge_dat <- merge(mono.de, bulk.mono.de, by = "gene")
+merge_dat <- merge_dat[order(merge_dat$p_val.bulk), ]
+
 
 ```
 
 ```{r, warning=FALSE, message=FALSE}
-# ap2-g
-map(v3_m2_asex_cr_filt_norm_harmony_jnd, ~FeaturePlot(.x, reduction = "umap.harmony_PC_man", label = T, features = "PF3D7-0113600", order = T))
+# create a new column to annotate sample-condition-celltype in the single-cell dataset
+ifnb$donor_id.stim <- paste0(ifnb$stim, "-", ifnb$donor_id)
+
+# generate violin plot 
+Idents(ifnb) <- "cluster_condition"
+print(merge_dat[merge_dat$gene%in%common[1:2],c('gene','p_val.sc','p_val.bulk')])
 
 ```
 
 ```{r, warning=FALSE, message=FALSE}
-# pfs16 gexp02
-map(v3_m2_asex_cr_filt_norm_harmony_jnd, ~FeaturePlot(.x, reduction = "umap.harmony_PC_man", label = T, features = "PF3D7-0406200",  order = T))
-map(v3_m2_asex_cr_filt_norm_harmony_jnd, ~FeaturePlot(.x, reduction = "umap.harmony_PC_man", label = T, features = "PF3D7-1102500", order = T))
+VlnPlot(ifnb, features = common[1:2], idents = c("CD14 Mono_CTRL", "CD14 Mono_STIM"), group.by = "stim") 
 
 ```
+
+```{r, warning=FALSE, message=FALSE}
+VlnPlot(ifnb, features = common[1:2], idents = c("CD14 Mono_CTRL", "CD14 Mono_STIM"), group.by = "donor_id.stim", ncol = 1) 
+
+```
+
+```{r, warning=FALSE, message=FALSE}
+print(merge_dat[merge_dat$gene%in%c('SRGN','HLA-DRA'),c('gene','p_val.sc','p_val.bulk')])
+```
+
+```{r, warning=FALSE, message=FALSE}
+VlnPlot(ifnb, features <- c('SRGN','HLA-DRA'), idents = c("CD14 Mono_CTRL", "CD14 Mono_STIM"), group.by = "donor_id.stim", ncol = 1) 
+```
+
+
+######### END - Pseudobulk DE #####################
+
+
+
+
+```{r, warning=FALSE, message=FALSE}
+cb_fm_de_leiden <- map(fm_leiden_w_donors_norm_harmony_jnd, ~FindAllMarkers(.x, assay = "RNA", slot = "data"))
+
+```
+
+
+```{r, warning=FALSE, message=FALSE}
+cb_fm_de_leiden_anot <- map(cb_fm_de_leiden, possibly(~.x %>% filter(p_val_adj < 0.05) %>% group_by(cluster) %>% arrange(p_val_adj, .by_group = T) %>% left_join(., Pf3D7_genes_plasmoDB[,c("gene_id", "Gene")], by = c("gene" = "gene_id"))))
+
+cb_fm_de_leiden_anot
+```
+
+```{r, warning=FALSE, message=FALSE}
+map(fm_leiden_w_donors_norm_harmony_jnd, ~DimPlot(.x, reduction = "umap.harmony_PC_man", group.by = "leiden", label = T))
+```
+
+
+```{r, warning=FALSE, message=FALSE}
+map(cb_fm_de_leiden_anot, possibly(~.x %>% 
+      filter(p_val_adj == 0 & avg_log2FC > 0) %>% 
+      arrange(desc(avg_log2FC)) %>% 
+      group_by(cluster) %>% 
+      slice_min(order_by = p_val_adj, n = 10) %>% 
+      slice_max(avg_log2FC, n =10)))
+
+```
+
+
+```{r, warning=FALSE, message=FALSE}
+map(cb_fm_de_leiden_anot, possibly(~.x %>% 
+      filter(p_val_adj == 0 & avg_log2FC > 0 & pct.1 > pct.2) %>% 
+      arrange(desc(avg_log2FC)) %>% 
+      group_by(cluster) %>% 
+      slice_min(order_by = p_val_adj, n = 10) %>% 
+      slice_max(avg_log2FC, n =10)))
+
+```
+
+```{r, warning=FALSE, message=FALSE}
+map(cb_fm_de_leiden_anot, possibly(~.x %>% 
+      filter(avg_log2FC > 0 & pct.1 > pct.2 & pct.2 < 0.1) %>% 
+      arrange(desc(avg_log2FC)) %>% 
+      group_by(cluster) %>% 
+      slice_min(order_by = p_val_adj, n = 10) %>% 
+      slice_max(avg_log2FC, n =10)))
+
+```
+
+```{r, warning=FALSE, message=FALSE}
+
+# map2(cb_fm_de_anot, c("9", "9", "3", "8"), ~.x %>% filter(cluster == .y & avg_log2FC >0))
+map2(cb_fm_de_anot, c("3", "8"), ~.x %>% filter(cluster == .y & avg_log2FC >0))
+
+```
+
+```{r, warning=FALSE, message=FALSE}
+map(cb_fm_de_anot, ~.x %>% filter(cluster %in% c("5", "13") & avg_log2FC >0) %>% arrange(desc(avg_log2FC)))
+```
+
+```{r, warning=FALSE, message=FALSE, fig.width=12, fig.height=3}
+# FabZ ADF2 
+map(fm_leiden_w_donors_norm_harmony_jnd, ~FeaturePlot(.x, reduction = "umap.harmony_PC_man", label = T, features = c("PF3D7-1323000", "PF3D7-1361400", "PF3D7-1471900", "PF3D7-1327000", "PF3D7-1430100"), order = T, ncol = 5))
+
+```
+
+```{r}
+#hrpIII and kahrp
+imap(fm_leiden_w_donors_norm_harmony_jnd, ~FeaturePlot(.x, reduction = "umap.harmony_PC_man", features = c("PF3D7-1372200", "PF3D7-0202000"), order = T, pt.size = 0.2, label = T) + labs(title = .y) )
+```
+
 
 ```{r, warning=FALSE, message=FALSE}
 # gene_count
-map(v3_m2_asex_cr_filt_norm_harmony_jnd, ~VlnPlot(.x, features = c( "nCount_RNA"), pt.size = 0))
+map(fm_leiden_w_donors_norm_harmony_jnd, ~VlnPlot(.x, features = c( "nCount_RNA"), pt.size = 0))
 ```
 
 ```{r, warning=FALSE, message=FALSE}
-# pfs16 gexp02
-map(v3_m2_asex_cr_filt_norm_harmony_jnd, ~FeaturePlot(.x, reduction = "umap.harmony_PC_man", label = T, features = "nFeature_RNA"))
-map(v3_m2_asex_cr_filt_norm_harmony_jnd, ~FeaturePlot(subset(.x, subset = nCount_RNA <2500), reduction = "umap.harmony_PC_man", label = T, features = "nCount_RNA"))
+map(fm_leiden_w_donors_norm_harmony_jnd, ~FeaturePlot(.x, reduction = "umap.harmony_PC_man", label = T, features = "nFeature_RNA"))
+# map(fm_leiden_w_donors_norm_harmony_jnd, ~FeaturePlot(subset(.x, subset = nCount_RNA <2500), reduction = "umap.harmony_PC_man", label = T, features = "nCount_RNA"))
 
 ```
 
-```{r, warning=FALSE, message=FALSE}
-map(cb_asex_de_anot, ~.x %>% filter(cluster %in% c("13") & avg_log2FC >0))
-```
 
 ```{r, warning=FALSE, message=FALSE}
-map(cb_asex_de_anot, ~.x %>%
+map(cb_fm_de_anot, ~.x %>%
   # filter(gene %in% gns) %>% 
   arrange(desc(avg_log2FC)) %>% filter(p_val_adj< 0.05) %>% group_by(Gene) %>% slice_max(order_by = avg_log2FC))
 
@@ -234,49 +434,36 @@ map(cb_asex_de_anot, ~.x %>%
 
 
 ```{r, warning=FALSE, message=FALSE}
-# cb_asex_de_anot %>% filter(gene %in% ap2g_gns_down) %>% arrange(avg_log2FC) %>% filter(p_val_adj< 0.05) %>% group_by(Gene) %>% slice_min(order_by = avg_log2FC)
-```
-
-```{r, warning=FALSE, message=FALSE}
-v3_m2_asex_cr_filt_norm_harmony_jnd <- map(v3_m2_asex_cr_filt_norm_harmony_jnd, ~FindNeighbors(.x, dims = 1:8, reduction = "integrated.harmony_PC_man"))
-```
-
-```{r, warning=FALSE, message=FALSE}
-v3_m2_asex_cr_filt_norm_harmony_jnd <- map(v3_m2_asex_cr_filt_norm_harmony_jnd, ~FindClusters(.x, resolution = 0.15, cluster.name = "harmony_clusters_coarse", random.seed = 949))
+fm_leiden_w_donors_norm_harmony_jnd <- map(fm_leiden_w_donors_norm_harmony_jnd, ~FindClusters(.x, resolution = 0.1, cluster.name = "harmony_clusters_coarse", random.seed = 949))
 ```
 
 
 ```{r, warning=FALSE, message=FALSE}
-map(v3_m2_asex_cr_filt_norm_harmony_jnd, ~DimPlot(.x, label = T, reduction = "umap.harmony_PC_man", group.by = "harmony_clusters_coarse"))
+map(fm_leiden_w_donors_norm_harmony_jnd, ~DimPlot(.x, label = T, reduction = "umap.harmony_PC_man", group.by = "harmony_clusters_coarse"))
 
 ```
 
 
 ```{r, warning=FALSE, message=FALSE}
-# Idents(v3_m2_asex_cr_filt_norm_harmony_jnd) <- "harmony_clusters_coarse"
-```
-
-```{r, warning=FALSE, message=FALSE, eval=T}
-## change default assay to RNA for getting cells with ap2g reads
-for (i in 1:length(v3_m2_asex_cr_filt_norm_harmony_jnd)) {
-  Idents(v3_m2_asex_cr_filt_norm_harmony_jnd[[i]]) <- "harmony_clusters_coarse"
-  
-}
-
+# Idents(fm_leiden_w_donors_norm_harmony_jnd) <- "harmony_clusters_coarse"
 ```
 
 ```{r, warning=FALSE, message=FALSE}
-cb_asex_de_coarse <- map(v3_m2_asex_cr_filt_norm_harmony_jnd, ~FindAllMarkers(.x, assay = "RNA", slot = "data"))
+fm_leiden_w_donors_norm_harmony_jnd <- map(fm_leiden_w_donors_norm_harmony_jnd, ~SetIdent(.x, value = "harmony_clusters_coarse"))
 ```
 
 ```{r, warning=FALSE, message=FALSE}
-cb_asex_de_coarse_anot <- map(cb_asex_de_coarse, ~.x %>% filter(p_val_adj < 0.05) %>% group_by(cluster) %>% arrange(p_val_adj, .by_group = T) %>% left_join(., Pf3D7_genes_plasmoDB[,c("gene_id", "Gene")], by = c("gene" = "gene_id")))
+cb_fm_de_coarse <- map(fm_leiden_w_donors_norm_harmony_jnd, ~FindAllMarkers(.x, assay = "RNA", slot = "data"))
+```
+
+```{r, warning=FALSE, message=FALSE}
+cb_fm_de_coarse_anot <- map(cb_fm_de_coarse, ~.x %>% filter(p_val_adj < 0.05) %>% group_by(cluster) %>% arrange(p_val_adj, .by_group = T) %>% left_join(., Pf3D7_genes_plasmoDB[,c("gene_id", "Gene")], by = c("gene" = "gene_id")))
 
 ```
 
 ```{r, warning=FALSE, message=FALSE}
 # ap2-g
-map(cb_asex_de_coarse_anot, ~.x %>% 
+map(cb_fm_de_coarse_anot, ~.x %>% 
       filter(p_val_adj == 0 & avg_log2FC > 0) %>% 
       arrange(desc(avg_log2FC)) %>% 
       group_by(cluster) %>% 
@@ -286,34 +473,34 @@ map(cb_asex_de_coarse_anot, ~.x %>%
 ```
 
 ```{r, warning=FALSE, message=FALSE, fig.width=16, fig.height=3}
-map(v3_m2_asex_cr_filt_norm_harmony_jnd, ~DimPlot(.x, label = T, reduction = "umap.harmony_PC_man", group.by = "harmony_clusters_coarse", split.by = "donor"))
+map(fm_leiden_w_donors_norm_harmony_jnd, ~DimPlot(.x, label = T, reduction = "umap.harmony_PC_man", group.by = "harmony_clusters_coarse", split.by = "donor"))
 ```
 
 ```{r, warning=FALSE, message=FALSE, eval=F}
-cb_asex_de_coarse_mast <- map(v3_m2_asex_cr_filt_norm_harmony_jnd, ~FindAllMarkers(.x, assay = "RNA", slot = "data", test.use = "MAST", latent.vars = "donor"))
+cb_fm_de_coarse_mast <- map(fm_leiden_w_donors_norm_harmony_jnd, ~FindAllMarkers(.x, assay = "RNA", slot = "data", test.use = "MAST", latent.vars = "donor"))
 ```
 
 
 
 ```{r, warning=FALSE, message=FALSE, eval=F}
-# saveRDS(cb_asex_de_coarse_mast, "data/processed/Pf/cb_asex_de_coarse_mast3.RDS")
+# saveRDS(cb_fm_de_coarse_mast, "data/processed/Pf/cb_fm_de_coarse_mast3.RDS")
 
 ```
 
 ```{r}
 # imap(v3_m2_asex_cr_filt_all, ~saveRDS(.x, paste0("data/processed/Pf/m2_all/v3_m2_asex_cr_filt_all_", .y, ".RDS")))
-# imap(cb_asex_de_coarse_mast, ~saveRDS(.x, paste0("data/processed/Pf/m2_all/cb_asex_de_coarse_mast_", .y, "_3.RDS")))
+# imap(cb_fm_de_coarse_mast, ~saveRDS(.x, paste0("data/processed/Pf/m2_all/cb_fm_de_coarse_mast_", .y, "_3.RDS")))
 
 ```
 
 ```{r, warning=FALSE, message=FALSE, eval=F}
-# cb_asex_de_coarse_mast <- readRDS("data/processed/Pf/cb_asex_de_coarse_mast3.RDS")
+# cb_fm_de_coarse_mast <- readRDS("data/processed/Pf/cb_fm_de_coarse_mast3.RDS")
 
 ```
 
 
 ```{r, warning=FALSE, message=FALSE, eval=F}
-cb_asex_de_coarse_mast_anot <- map(cb_asex_de_coarse_mast, ~.x %>% filter(p_val_adj < 0.05) %>% group_by(cluster) %>% arrange(p_val_adj, .by_group = T) %>% left_join(., Pf3D7_genes_plasmoDB[,c("gene_id", "Gene")], by = c("gene" = "gene_id")))
+cb_fm_de_coarse_mast_anot <- map(cb_fm_de_coarse_mast, ~.x %>% filter(p_val_adj < 0.05) %>% group_by(cluster) %>% arrange(p_val_adj, .by_group = T) %>% left_join(., Pf3D7_genes_plasmoDB[,c("gene_id", "Gene")], by = c("gene" = "gene_id")))
 
 ```
 
@@ -321,7 +508,7 @@ cb_asex_de_coarse_mast_anot <- map(cb_asex_de_coarse_mast, ~.x %>% filter(p_val_
 
 ```{r, warning=FALSE, message=FALSE, eval=F}
 # ap2-g
-map(cb_asex_de_coarse_mast_anot, ~.x %>% 
+map(cb_fm_de_coarse_mast_anot, ~.x %>% 
       filter(p_val_adj == 0 & avg_log2FC > 0) %>% 
       arrange(desc(avg_log2FC)) %>% 
       group_by(cluster) %>% 
@@ -331,7 +518,7 @@ map(cb_asex_de_coarse_mast_anot, ~.x %>%
 ```
 
 ```{r, warning=FALSE, message=FALSE, eval=F}
-cb_asex_de_coarse_anot %>% filter(gene == "PF3D7-0930300")
+cb_fm_de_coarse_anot %>% filter(gene == "PF3D7-0930300")
 ```
 
 
@@ -347,7 +534,7 @@ lowerfun <- function(data, mapping) {
 ```
 
 ```{r, eval=F}
-FetchData(object = v3_m2_asex_cr_filt_norm_harmony_jnd[, v3_m2_asex_cr_filt_norm_harmony_jnd$harmony_pc_man_clusters %in% c("13", "5", "12", "2")], 
+FetchData(object = fm_leiden_w_donors_norm_harmony_jnd[, fm_leiden_w_donors_norm_harmony_jnd$harmony_pc_man_clusters %in% c("13", "5", "12", "2")], 
           vars = c("PF3D7-1467600", "PF3D7-1472200", "PF3D7-1473200", "PF3D7-1222600", "PF3D7-0406500", "PF3D7-0424400", "PF3D7-1102500"),
           slot = "data") %>% 
   select(where(~!all(is.na(.x)))) %>%
@@ -359,7 +546,7 @@ FetchData(object = v3_m2_asex_cr_filt_norm_harmony_jnd[, v3_m2_asex_cr_filt_norm
 
 
 ```{r, eval=F}
-FetchData(object = v3_m2_asex_cr_filt_norm_harmony_jnd[, v3_m2_asex_cr_filt_norm_harmony_jnd$harmony_pc_man_clusters %in% c("13", "5", "12", "2")], 
+FetchData(object = fm_leiden_w_donors_norm_harmony_jnd[, fm_leiden_w_donors_norm_harmony_jnd$harmony_pc_man_clusters %in% c("13", "5", "12", "2")], 
           vars = c("PF3D7-1467600", "PF3D7-1472200", "PF3D7-1473200", "PF3D7-1222600", "PF3D7-0406500", "PF3D7-0424400"),
           slot = "data") %>% 
   select(where(~!all(is.na(.x)))) %>%
@@ -374,26 +561,27 @@ FetchData(object = v3_m2_asex_cr_filt_norm_harmony_jnd[, v3_m2_asex_cr_filt_norm
 
 
 ```{r, warning=FALSE, message=FALSE}
-v3_m2_asex_cr_filt_norm_harmony_jnd_fine_clustrs <- map(v3_m2_asex_cr_filt_norm_harmony_jnd, ~FindClusters(.x, resolution = 0.85, cluster.name = "harmony_clusters_fine_erings"))
+fm_leiden_w_donors_norm_harmony_jnd_fine_clustrs <- map(fm_leiden_w_donors_norm_harmony_jnd, ~FindClusters(.x, resolution = 0.85, cluster.name = "harmony_clusters_fine_erings"))
 
-rm(v3_m2_asex_cr_filt_norm_harmony_jnd)
+rm(fm_leiden_w_donors_norm_harmony_jnd)
 ```
 
 ```{r, warning=FALSE, message=FALSE}
-# imap(v3_m2_asex_cr_filt_norm_harmony_jnd, ~saveRDS(., paste0("data/processed/Pf/m2_all/v3_m2_asex_cr_filt_", .y,"_norm_harmony_jnd.RDS")))
-imap(v3_m2_asex_cr_filt_norm_harmony_jnd_fine_clustrs, ~saveRDS(., paste0("data/processed/Pf/m2_all/v3_m2_asex_cr_filt_", .y,"_norm_harmony_jnd_fine_clustrs3.RDS")))
+go()
+# imap(fm_leiden_w_donors_norm_harmony_jnd, ~saveRDS(., paste0("data/processed/Pf/m2_all/v3_m2_asex_cr_filt_", .y,"_norm_harmony_jnd.RDS")))
+imap(fm_leiden_w_donors_norm_harmony_jnd_fine_clustrs, ~saveRDS(., paste0("data/processed/Pf/m2_all/v3_m2_asex_cr_filt_", .y,"_norm_harmony_jnd_fine_clustrs.RDS")))
 
 ```
 
 ```{r, warning=FALSE, message=FALSE}
-map(v3_m2_asex_cr_filt_norm_harmony_jnd_fine_clustrs, ~DimPlot(.x, label = T, reduction = "umap.harmony_PC_man", group.by = "harmony_clusters_fine_erings"))
+map(fm_leiden_w_donors_norm_harmony_jnd_fine_clustrs, ~DimPlot(.x, label = T, reduction = "umap.harmony_PC_man", group.by = "harmony_clusters_fine_erings"))
 ```
 
 
 ```{r, warning=FALSE, message=FALSE}
-map(v3_m2_asex_cr_filt_norm_harmony_jnd_fine_clustrs, ~DimPlot(.x, label = F, reduction = "umap.harmony_PC_man", group.by = "stage_fld"))
+map(fm_leiden_w_donors_norm_harmony_jnd_fine_clustrs, ~DimPlot(.x, label = F, reduction = "umap.harmony_PC_man", group.by = "stage_fld"))
 ```
 
 ```{r, warning=FALSE, message=FALSE}
-map(v3_m2_asex_cr_filt_norm_harmony_jnd_fine_clustrs, ~FeaturePlot(.x, label = T, reduction = "umap.harmony_PC_man", features = "scf_score_rand", order = T))
+map(fm_leiden_w_donors_norm_harmony_jnd_fine_clustrs, ~FeaturePlot(.x, label = T, reduction = "umap.harmony_PC_man", features = "scf_score_rand", order = T))
 ```
